# mattermost-mobile

./: !  .babelrc  .buckconfig  .editorconfig  .env  .eslintrc.json  .flowconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .jetrc.js  .solidarity  9325.diff  AGENTS.md  ASSET_UPDATE_GUIDE.md  Amazing 3D effects  App.tsx  CHANGELOG.md  CHANNEL_LIST_ARCHITECTURE.md  CLAUDE-DETOX-ZEPHYR-MIGRATION.md  CLAUDE-IOS-SIMULATOR.md  CLAUDE.md  CONTRIBUTING.md  DAAKIAHOME_VS_ORIGINAL_COMPARISON.md  DAAKIA_HOME_FIX_IMPLEMENTATION.md  DAAKIA_HOME_FLOW_DIAGRAM.md  DAAKIA_HOME_TEAM_FLOW_ANALYSIS.md  DAAKIA_REBRANDING_GUIDE.md  Gemfile  IOS_PUSH_NOTIFICATIONS_SETUP.md  IOS_SETUP_SUMMARY.md  ISSUE_TEMPLATE.md  ImagePickerModule.java  Intune.md  Jenkinsfile  LICENSE.txt  MERGE_DESCRIPTION_TEMPLATE.md  MERGE_WORKFLOW_GUIDE.md  (+55 more)
.circleci/: config.yml
.claude/: settings.local.json
.cursor/: Dockerfile  README.md  cursor.md  environment.json  worktree.json
.e2e-debug/: 28375328964-failure-registry.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.husky/: pre-commit
.storybook/: main.js  preview.js
android/: .project  build.gradle  buildscript-gradle.lockfile  gradle.properties  gradlew  gradlew.bat  settings.gradle
app/: app.js  app_object.js  fetch_preconfig.js  initial_state.js  mattermost.android.js  mattermost.js  mattermost.test.js  mattermost.ts  mattermost_deprecated.js
artifacts/: parse_failures.py
libraries/@mattermost/e2ee/rust/: Cargo.toml  uniffi.toml
libraries/@mattermost/e2ee/rust/src/: lib.rs
(+10030 files in other folders)
