[package]
name = "mattermost-e2ee"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = "=0.7.1"
uniffi = { version = "=0.29.3", features = ["build"] }

[build-dependencies]
uniffi = { version = "=0.29.3", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "mattermost_e2ee"
